[package]
name = "pano"
version = "0.1.0"
edition = "2024"
description = "A lightweight utility for displaying web content in a transparent, always-on-top window."
license = "MIT"
repository = "https://github.com/codecflow/pano"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tao = "0.34.3"
wry = { version = "0.53.3", features = ["transparent"] }

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
# opt-level = "z"
# panic = "abort"
